unpackaged/main/default/objects/FS_Nominators__c/FS_Nominators__c.object-meta.xml
<CustomObject>
    <label>Nominators</label>
    <nameField>
        <displayFormat>N-{00000}</displayFormat>
        <label>Nominator</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Nominators</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>