unpackaged/main/default/objects/FS_Nominators__c/fields/FS_Date_Nominated__c.field-meta.xml
<CustomField>
    <fullName>FS_Date_Nominated__c</fullName>
    <inlineHelpText>Date the fellow was nominated</inlineHelpText>
    <label>Date Nominated</label>
    <type>Date</type>
</CustomField>