unpackaged/main/default/objects/FS_Nominators__c/fields/FS_Fellow__c.field-meta.xml
<CustomField>
    <fullName>FS_Fellow__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Fellow</label>
    <referenceTo>FS_Fellow__c</referenceTo>
    <relationshipName>Nominations</relationshipName>
    <type>Lookup</type>
</CustomField>