unpackaged/main/default/objects/FS_Nominators__c/fields/FS_Nominated_By__c.field-meta.xml
<CustomField>
    <fullName>FS_Nominated_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Nominated By</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Nominations1</relationshipName>
    <type>Lookup</type>
</CustomField>